--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - 8100:8100       # bluemap
       - 8123:8123       # dynmap
     volumes:
-      - ./minecraft_data:/data
+      - ./data:/data
     logging:
       driver: "json-file"
       options:
