--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,16 @@
 # GENERAL
 MY_DOMAIN=example.com
-DOCKER_MY_NETWORK=caddy_net
-TZ=Europe/Bratislava
+TZ=Europe/London
 
 # ITZG MINECRAFT SPECIFIC
 TYPE=PURPUR
-EULA=TRUE
-ONLINE_MODE=FALSE
-SNOOPER_ENABLED=FALSE
-SERVER_NAME=Blablabla
-ALLOW_CHEATS=TRUE
+EULA=true
+VERSION=LATEST
+ONLINE_MODE=true
+SNOOPER_ENABLED=false
+SERVER_NAME=MCServer
+ALLOW_CHEATS=false
 MAX_MEMORY=3G
-MAX_PLAYERS=50
-ENABLE_COMMAND_BLOCK=TRUE
-ALLOW_NETHER=TRUE
-
+MAX_PLAYERS=5
+ENABLE_COMMAND_BLOCK=true
+ALLOW_NETHER=true
