--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,12 @@
 services:
   minecraft:
-    image: itzg/minecraft-server
+    image: itzg/minecraft-bedrock-server
     container_name: minecraft
     hostname: minecraft
     restart: unless-stopped
     env_file: .env
-    tty: true
-    stdin_open: true
     ports:
-      - 25565:25565     # minecraft server players connect
-      - 8100:8100       # bluemap
-      - 8123:8123       # dynmap
+      - "19132:19132/udp"
     volumes:
       - ./data:/data
     logging:
@@ -18,9 +14,3 @@ services:
       options:
         max-size: "50m"
         max-file: "5"
-
-networks:
-  default:
-    name: $DOCKER_MY_NETWORK
-    external: true
-
